package com.example.myapplication.Obj;

public class Organization {
    private String orgName;

    public Organization(){}

    public Organization(String orgName){
        this.orgName=orgName;
    }

    public String getOrgName() {
        return orgName;
    }

    public void setOrgName(String orgName) {
        this.orgName = orgName;
    }
}
